--- a/index.html
+++ b/index.html
@@ -5,39 +5,345 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap demo</title>
+  <!-- Подключаем стили -->
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <!-- Подключаем стили Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
 
-  <div class="container">
+  <!-- NAV-START -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light blur-nav">
+    <img src="assets/logo.png" class="nav-logo">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <div class="animated-title">
-      <div class="sub-title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ</div>
-      <div class="title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ И ИСПЫТАНИЮ СРЕДСТВ ЗАЩИТЫ,
-        ИСПОЛЬЗУЕМЫХ В ЭЛЕКТРОУСТАНОВКАХ</div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">ЭЛЕКТРОМОНТАЖ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">ОБСЛУЖИВАНИЕ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">НОРМАТИВНАЯ БАЗА</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">КОНТАКТЫ</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <img src="assets/search.svg" class="nav-search">
+      </form>
     </div>
+  </nav>
+  <!-- NAV-END -->
 
-    <div class="animated-title">
-      <div class="sub-title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ</div>
-      <div class="title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ И ИСПЫТАНИЮ СРЕДСТВ ЗАЩИТЫ,
-        ИСПОЛЬЗУЕМЫХ В ЭЛЕКТРОУСТАНОВКАХ</div>
+  <!-- CAROUSEL-START -->
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/slider-items/1.png" id="slide1" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/slider-items/2.png" id="slide2" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/slider-items/3.png" id="slide3" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/slider-items/4.png" id="slide4" alt="Third slide">
+      </div>
     </div>
-
-    <div class="animated-title">
-      <div class="sub-title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ</div>
-      <div class="title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ И ИСПЫТАНИЮ СРЕДСТВ ЗАЩИТЫ,
-        ИСПОЛЬЗУЕМЫХ В ЭЛЕКТРОУСТАНОВКАХ</div>
-    </div>
-
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+  <!-- CAROUSEL-END -->
+
+  <!-- ABOUT-START -->
+  <div class="box-gray">
+    <div class="container">
+      <p>
+        <b>ООО «Проминвест-Ст»</b> – это сплоченная команда высококвалифицированных профессионалов, обладающих
+        передовыми
+        знаниями
+        и современными технологиями, хорошо разбирающихся в проблемах энергетики и способах их решения. Наши сотрудники
+        способны своевременно и качественно решать задачи любой сложности.
+      </p>
+
+      <p>
+        <b>Специалисты компании имеют высшее профильное образование и прошли дополнительное образование в области
+          энергетического обследования.</b><br>
+        Квалификация сотрудников подтверждена удостоверениями и сертификатами.
+      </p>
+    </div>
+  </div>
+  <!-- ABOUT-END -->
+
+  <!-- ADVANTAGES-START -->
+  <div class="container">
+    <div class="center">
+      <div class="static-title">
+        <div class="sub-title">ПРЕИМУЩЕСТВА</div>
+        <div class="title">Наши преимущества</div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/calculation.png">
+          <div class="title">
+            БЫСТРЫЙ РАСЧЕТ
+          </div>
+          <div class="sub-title">
+            Мы автоматизировали
+            процесс рассчета
+            стоимости работ,
+            в результате вы получаете
+            быструю и подробную смету
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/team.png">
+          <div class="title">
+            ПРОФФЕСИОНАЛЬНАЯ<br>
+            КОМАНДА
+          </div>
+          <div class="sub-title">
+            У нас работают только
+            высококвалифицированные
+            специалисты, которые
+            знают свою работу
+
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/quality.png">
+          <div class="title">
+            ВЫСОКОЕ КАЧЕСТВО<br>
+            и ОПЫТ
+          </div>
+          <div class="sub-title">
+            Наша компания
+            на рынке уже 20 лет,
+            за это время
+            мы отточили подход,
+            предотвращающий ошибки
+            на производстве
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/lab.png">
+          <div class="title">
+            ЭЛЕКТРО-ЛАБОРАТОРИЯ
+          </div>
+          <div class="sub-title">
+            Выявление неполадок в сети
+            входит в перечень работ,
+            электротехнической лаборатории
+          </div>
+        </div>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous">
-    </script>
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/service.png">
+          <div class="title">
+            ПОСТГАРАНТИЙНОЕ
+            ОБСЛУЖИВАНИЕ
+          </div>
+          <div class="sub-title">
+            Работа специалистов
+            с детальной разработкой решений,
+            именно для Вашего объекта
+            и контроль качества при
+            выполнении монтажных работ,
+            оформление документации
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/reliability.png">
+          <div class="title">
+            НАДЕЖНОСТЬ
+          </div>
+          <div class="sub-title">
+            Наша компания
+            не входит в реестр
+            недобросовестных поставщиков,
+            в состав исполнительных органов
+            компании не входят
+            дисквалифицированные лица
+            (данные можно проверить в ФАС)
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 advantage">
+          <img src="assets/application.png">
+          <div class="title">
+            СПЕКТОР ПРИМЕНЕНИЯ
+          </div>
+          <div class="sub-title">
+            Все что необходимо заказчику
+            в области электроснабжения
+            предприятия до и выше 1000 В
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ADVANTAGES-END -->
+
+  <!-- INFOBLOCK-START -->
+  <div class="bg-box">
+    <div class="container">
+      <p>
+        <b>ООО «Проминвест-Ст» имеет собственный современный парк оборудования, современное компьютерное обеспечение</b>
+        и
+        аттестованный в Федеральной службе по экологическому, технологическому и атомному надзору (Ростехнадзоре)
+        персонал
+        электромонтажного подразделения и подразделения ЭТЛ.
+      </p>
+      <p>
+        Главными принципами при проведении электромонтажных работ и электроизмерений электроустановок, является
+        максимальная
+        скрупулезность (тщательность, обстоятельность) в обследовании и детализация в работе
+      </p>
+      <p>
+        <b class="c-secondary">Работа сотрудников организации ООО «Проминвест-Ст» основана на оптимизации затрат
+          Заказчика.</b> Стоимость нашего
+        вознаграждения по договору, всегда окупается для Партнёров ООО «Проминвест-Ст» в финансовом плане, а также имеет
+        положительные моменты в виде бережённого эмоционального спокойствия и принятии обоснованных правильных решений.
+      </p>
+    </div>
+  </div>
+  <!-- INFOBLOCK-END -->
+
+  <!-- SERVICES-START -->
+  <div class="container">
+    <div class="center">
+      <div class="static-title">
+        <div class="sub-title">УСЛУГИ</div>
+        <div class="title">НАШИ УСЛУГИ</div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="service">
+            <img src="assets/electro.png" onmouseover='changeSrc(this, "assets/electro_hover.png")'
+              onmouseout='changeSrc(this, "assets/electro.png")'>
+            <div class="title">
+              ЭЛЕКТРОМОНТАЖНЫЕ
+              РАБОТЫ
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="service">
+            <img src="assets/elab.png" onmouseover='changeSrc(this, "assets/elab_hover.png")'
+              onmouseout='changeSrc(this, "assets/elab.png")'>
+            <div class="title">
+              УСЛУГИ
+              ЭЛЕКТРО-ЛАБОРАТОРИИ
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="service">
+            <img src="assets/eservice.png" onmouseover='changeSrc(this, "assets/eservice_hover.png")'
+              onmouseout='changeSrc(this, "assets/eservice.png")'>
+            <div class="title">
+              ТЕХНИЧЕСКОЕ ОБСЛУЖИВАНИЕ
+              ЭЛЕКТРООБОРУДОВАНИЯ
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="service">
+            <img src="assets/rent.png" onmouseover='changeSrc(this, "assets/rent_hover.png")'
+              onmouseout='changeSrc(this, "assets/rent.png")'>
+            <div class="title">
+              АРЕНДА
+              УСЛУГИ АВТО-ВЫШКИ
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <!-- SERVICES-END -->
+
+
+  <!-- FOOTER START -->
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 section">
+          <img src="assets/logo-white.png" height="70px">
+          <br>
+          <br>
+          <a href="#" class="phone-link">+7(928) 3 211-213</a>
+          <p>prominvest-st@mail.ru</p>
+          <p>355000, г. Ставрополь,<br>
+            проспект Кулакова 8Ш, офис 8</p>
+        </div>
+        <div class="col-md-4 section">
+          <a class="link" href="">ГЛАВНАЯ</a><br>
+          <a class="link" href="">ЭЛЕКТРОМОНТАЖ</a><br>
+          <a class="link" href="">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a><br>
+          <a class="link" href="">ОБСЛУЖИВАНИЕ</a><br>
+          <a class="link" href="">НОРМАТИВНАЯ БАЗА</a><br>
+          <a class="link" href="">КОНТАКТЫ</a><br>
+        </div>
+        <div class="col-md-4 section" style="text-align: right;">
+          Поиск
+        </div>
+      </div>
+      <br>
+      <p class="center">
+        Copyright © 2022 ООО "Проминвест-СТ".
+      </p>
+    </div>
+  </div>
+  <!-- FOOTER END -->
+
+  <!-- Подключаем скрипты -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-detect-breakpoint/src/bootstrap-detect-breakpoint.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
