Created partners section

--- a/index.html
+++ b/index.html
@@ -298,8 +298,31 @@
   </div>
   <!-- SERVICES-END -->
 
+  <!-- PARTNERS-START -->
+  <div class="row partners">
+    <div class="col-md-2">
+      <img src="assets/partners/title.png" class="title">
+    </div>
+    <div class="col-md-8 center">
+      <img src="assets/partners/1.png" class="partner">
+      <img src="assets/partners/2.png" class="partner">
+      <img src="assets/partners/3.png" class="partner">
+      <img src="assets/partners/4.png" class="partner">
+      <img src="assets/partners/6.png" class="partner">
+      <img src="assets/partners/7.png" class="partner">
+      <img src="assets/partners/8.png" class="partner">
+      <img src="assets/partners/9.png" class="partner">
+      <img src="assets/partners/10.png" class="partner">
+      <img src="assets/partners/11.png" class="partner">
+      <img src="assets/partners/12.png" class="partner">
+    </div>
+    <div class="col-md-2">
 
-  <!-- FOOTER START -->
+    </div>
+  </div>
+  <!-- PARTNERS-END -->
+
+  <!-- FOOTER-START -->
   <div class="footer">
     <div class="container">
       <div class="row">
@@ -330,7 +353,7 @@
       </p>
     </div>
   </div>
-  <!-- FOOTER END -->
+  <!-- FOOTER-END -->
 
   <!-- Подключаем скрипты -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
