Crated page normative_base

--- a/service.html
+++ b/service.html
@@ -326,7 +326,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/gallery.js"></script>
 </body>
 
 </html>
