--- a/contacts.html
+++ b/contacts.html
@@ -24,22 +24,22 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="wiring.html">ЭЛЕКТРОМОНТАЖ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="service.html">ОБСЛУЖИВАНИЕ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="normative_base.html">НОРМАТИВНАЯ БАЗА</a>
+        </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ЭЛЕКТРОМОНТАЖ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ОБСЛУЖИВАНИЕ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">НОРМАТИВНАЯ БАЗА</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">КОНТАКТЫ</a>
         </li>
       </ul>
@@ -106,7 +106,31 @@
       по всем вопросам: <span class="c-primary">от стоимости работ, до сроков выполнения работ</span>
     </p>
     <div class="contact-form">
+      <h4 class="c-primary">
+        Заполните форму заявки
+      </h4>
 
+      <div class="row">
+        <div class="col-md-4">
+          <input name="name" class="custom-input" placeholder="Ваше имя *">
+
+          <input name="name" class="custom-input" placeholder="Ваше имя *">
+
+          <input name="name" class="custom-input" placeholder="Ваше имя *">
+        </div>
+        <div class="col-md-8">
+          <textarea name="name" style="height: 188px;" class="custom-input" placeholder="Ваше имя *"></textarea>
+        </div>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Я даю согласие на обработку моих персональных данных
+        </label>
+      </div>
+      <div style="text-align: right;">
+        <button class="custom-btn">Отправить</button>
+      </div>
     </div>
   </div>
 
