--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
           <a class="nav-link" href="#">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ЭЛЕКТРОМОНТАЖ</a>
+          <a class="nav-link" href="wiring.html">ЭЛЕКТРОМОНТАЖ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
+          <a class="nav-link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ОБСЛУЖИВАНИЕ</a>
+          <a class="nav-link" href="service.html">ОБСЛУЖИВАНИЕ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">НОРМАТИВНАЯ БАЗА</a>
+          <a class="nav-link" href="normative_base.html">НОРМАТИВНАЯ БАЗА</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">КОНТАКТЫ</a>
+          <a class="nav-link" href="contacts.html">КОНТАКТЫ</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
