--- a/wiring.html
+++ b/wiring.html
@@ -25,23 +25,23 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
+          <a class="nav-link" href="index.html">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" href="#">ЭЛЕКТРОМОНТАЖ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
+          <a class="nav-link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ОБСЛУЖИВАНИЕ</a>
+          <a class="nav-link" href="service.html">ОБСЛУЖИВАНИЕ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">НОРМАТИВНАЯ БАЗА</a>
+          <a class="nav-link" href="normative_base.html">НОРМАТИВНАЯ БАЗА</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">КОНТАКТЫ</a>
+          <a class="nav-link" href="contacts.html">КОНТАКТЫ</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
