--- a/elab.html
+++ b/elab.html
@@ -18,7 +18,7 @@
   <!-- NAV-START -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light blur-nav">
     <img src="assets/logo.png" class="nav-logo">
-    <div class="vertical-line d-md-none d-lg-block"></div>
+    <div class="vertical-line d-md-none d-none d-lg-block"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <div class="vertical-line d-md-none d-lg-block"></div>
+        <div class="vertical-line d-md-none d-none d-lg-block"></div>
         <img src="assets/search.svg" class="nav-search">
       </form>
     </div>
@@ -362,44 +362,44 @@
           а кроме того, являются основанием для ремонта оборудования или его замены.
         </p>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-lg-3 col-md-4">
+      <div class="row justify-content-center tools">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/1.png">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/2.png">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/3.png">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/4.png">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/5.png">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/6.png">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-3">
           <div class="tools-circle">
             <img src="assets/tools/7.png">
           </div>
@@ -702,7 +702,7 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <img src="assets/logo-white.png" height="70px">
           <br>
           <br>
@@ -711,7 +711,7 @@
           <p>355000, г. Ставрополь,<br>
             проспект Кулакова 8Ш, офис 8</p>
         </div>
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <a class="link" href="index.html">ГЛАВНАЯ</a><br>
           <a class="link" href="wiring.html">ЭЛЕКТРОМОНТАЖ</a><br>
           <a class="link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a><br>
@@ -720,7 +720,7 @@
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
-          Поиск
+          
         </div>
       </div>
       <br>
