--- a/normative_base.html
+++ b/normative_base.html
@@ -18,7 +18,7 @@
   <!-- NAV-START -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light blur-nav">
     <img src="assets/logo.png" class="nav-logo">
-    <div class="vertical-line d-md-none d-lg-block"></div>
+    <div class="vertical-line d-md-none d-none d-lg-block"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <div class="vertical-line d-md-none d-lg-block"></div>
+        <div class="vertical-line d-md-none d-none d-lg-block"></div>
         <img src="assets/search.svg" class="nav-search">
       </form>
     </div>
@@ -55,8 +55,8 @@
 
   <div class="container" style="margin-top: 70px;">
     <div class="static-title" style="margin-bottom: 0px; padding-bottom: 0px;">
-      <div class="sub-title">ЭЛЕКТРО-ЛАБОРАТОРИЯ</div>
-      <div class="title">ЭЛЕКТРО-ЛАБОРАТОРИЯ</div>
+      <div class="sub-title">НОРМАТИВНАЯ БАЗА</div>
+      <div class="title">НОРМАТИВНАЯ БАЗА</div>
     </div>
   </div>
   <img src="assets/divider.png" height="3px" style="margin-bottom: 20px;">
@@ -223,7 +223,7 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <img src="assets/logo-white.png" height="70px">
           <br>
           <br>
@@ -232,7 +232,7 @@
           <p>355000, г. Ставрополь,<br>
             проспект Кулакова 8Ш, офис 8</p>
         </div>
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <a class="link" href="index.html">ГЛАВНАЯ</a><br>
           <a class="link" href="wiring.html">ЭЛЕКТРОМОНТАЖ</a><br>
           <a class="link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a><br>
@@ -241,7 +241,7 @@
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
-          Поиск
+          
         </div>
       </div>
       <br>
