--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
   <!-- NAV-START -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light blur-nav">
     <img src="assets/logo.png" class="nav-logo">
-    <div class="vertical-line d-md-none d-lg-block"></div>
+    <div class="vertical-line d-md-none d-none d-lg-block"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <div class="vertical-line d-md-none d-lg-block"></div>
+        <div class="vertical-line d-md-none d-none d-lg-block"></div>
         <img src="assets/search.svg" class="nav-search">
       </form>
     </div>
@@ -282,7 +282,7 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <img src="assets/logo-white.png" height="70px">
           <br>
           <br>
@@ -299,8 +299,8 @@
           <a class="link" href="normative_base.html">НОРМАТИВНАЯ БАЗА</a><br>
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
-        <div class="col-md-4 section" style="text-align: right;">
-          Поиск
+        <div class="col-md-4 col-6 section" style="text-align: right;">
+          
         </div>
       </div>
       <br>
