--- a/wiring.html
+++ b/wiring.html
@@ -18,7 +18,7 @@
   <!-- NAV-START -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light blur-nav">
     <img src="assets/logo.png" class="nav-logo">
-    <div class="vertical-line d-md-none d-lg-block"></div>
+    <div class="vertical-line d-md-none d-none d-lg-block"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <div class="vertical-line d-md-none d-lg-block"></div>
+        <div class="vertical-line d-md-none d-none d-lg-block"></div>
         <img src="assets/search.svg" class="nav-search">
       </form>
     </div>
@@ -137,6 +137,7 @@
 
       <div class="row portfolio-container justify-content-center" data-aos="fade-up" data-aos-delay="200">
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <img src="assets/click.png" class="click d-sm-block d-md-none">
           <div class="portfolio-img"><img src="assets/projects/1.png" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
             <b>СЕТЬ: ХМЕЛЬНИЦКИЕ БУЛОЧНЫЕ</b><br>
@@ -337,7 +338,7 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <img src="assets/logo-white.png" height="70px">
           <br>
           <br>
@@ -346,7 +347,7 @@
           <p>355000, г. Ставрополь,<br>
             проспект Кулакова 8Ш, офис 8</p>
         </div>
-        <div class="col-md-4 section">
+        <div class="col-md-4 col-6 section">
           <a class="link" href="index.html">ГЛАВНАЯ</a><br>
           <a class="link" href="wiring.html">ЭЛЕКТРОМОНТАЖ</a><br>
           <a class="link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a><br>
@@ -355,7 +356,7 @@
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
-          Поиск
+          
         </div>
       </div>
       <br>
