--- a/elab.html
+++ b/elab.html
@@ -105,7 +105,7 @@
         Производить качественные измерения проще и дешевле, чем работать с рекламациями и потерять репутацию.
         Именно поэтому специалисты ООО «Проминвест-Ст» нацелены на объективные результаты и имеют значительный
         опыт по проведению различных испытаний. Мы работаем в интересах клиентов, предоставляя исключительное
-        обслуживание и помогая в достижении поставленных целей. Опыт более 10 лет.
+        обслуживание и помогая в достижении поставленных целей. Опыт более 15 лет.
       </p>
     </div>
   </div>
@@ -134,9 +134,10 @@
         </p>
 
         <p>
-          <b><i>Электротехническая лаборатория</i></b> – это современная электротехническая организация, которая
-          предоставляет определённый спектр услуг, связанных с электрическими измерениями сети в офисах,
-          на производстве, торговых центрах, домах и квартирах.
+          <b><i>Электротехническая лаборатория</i></b> создана на основании приказа руководителя ООО «Проминвест-Ст» в
+          целях проведения измерений и испытаний параметров электроустановок. ЭТЛ является официально признанной,
+          технически компетентной и независимой по испытаниям и измерениям электроустановок. ЭТЛ функционирует на базе
+          ООО «Проминвест-Ст» и является подразделением данной организации.
         </p>
 
         <p>
@@ -617,15 +618,18 @@
             удельного сопротивления грунта.
           </li>
           <li>
-            Проверка цепи между заземлителями и заземляемыми элементами (ПУЭ, 7-е изд., п. 1.8.39); проверка наличия цепи
+            Проверка цепи между заземлителями и заземляемыми элементами (ПУЭ, 7-е изд., п. 1.8.39); проверка наличия
+            цепи
             между заземленными установками и элементами заземленной установки (ПТЭЭП, приложение 3, п. 28.5).
           </li>
           <li>
-            Измерение сопротивления изоляции электрооборудования, электрических аппаратов, силовых кабелей, электропроводок,
+            Измерение сопротивления изоляции электрооборудования, электрических аппаратов, силовых кабелей,
+            электропроводок,
             осветительных сетей, вторичных цепей и т.п.
           </li>
           <li>
-            Измерение сопротивления петли «фаза-нуль» и вычисление тока короткого замыкания в электроустановках до 1000 В с
+            Измерение сопротивления петли «фаза-нуль» и вычисление тока короткого замыкания в электроустановках до 1000
+            В с
             глухозаземленной нейтралью.
           </li>
           <li>
@@ -648,7 +652,8 @@
             Измерения сопротивления изоляции и коэффициента абсорбции трансформаторов и электрических машин Uн 6(10)кВ.
           </li>
           <li>
-            Измерения сопротивления обмоток трансформаторов, реакторов и электрических машин Uн 6(10)кВ постоянным током.
+            Измерения сопротивления обмоток трансформаторов, реакторов и электрических машин Uн 6(10)кВ постоянным
+            током.
           </li>
           <li>
             Испытания прочности изоляции повышенным напряжением промышленной частоты силовых трансформаторов.
@@ -666,7 +671,8 @@
             Проведение испытаний разъединителей, короткозамыкателей и отделителей 6–10кВ.
           </li>
           <li>
-            Измерения переходного сопротивления болтовых контактных соединений шин, контактов выключателей, разъединителей,
+            Измерения переходного сопротивления болтовых контактных соединений шин, контактов выключателей,
+            разъединителей,
             отделителей.
           </li>
           <li>
@@ -720,7 +726,7 @@
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
-          
+
         </div>
       </div>
       <br>
@@ -742,7 +748,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-detect-breakpoint/src/bootstrap-detect-breakpoint.js"></script>
-  
+
 </body>
 
 </html>
