--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <img src="assets/comma.png">
       </div>
       <p>
-        <b>ООО «Проминвест-Ст»</b> – это сплоченная команда высококвалифицированных профессионалов, обладающих
+        <b>ООО «Проминвест-Ст»</b> – это сплоченная команда высококвалифицированных специалистов, обладающих
         передовыми
         знаниями
         и современными технологиями, хорошо разбирающихся в проблемах энергетики и способах их решения. Наши сотрудники
@@ -102,9 +102,9 @@
       </p>
 
       <p>
-        <b>Специалисты компании имеют высшее профильное образование и прошли дополнительное образование в области
-          энергетического обследования.</b><br>
-        Квалификация сотрудников подтверждена удостоверениями и сертификатами.
+        <b>Специалисты компании имеют высшее и специальное профильное образование, проходят периодическое повышение
+          квалификации в специализированных учебных центрах, что подтверждается удостоверениями установленного образца.
+        </b><br>
       </p>
     </div>
   </div>
@@ -125,11 +125,8 @@
             БЫСТРЫЙ РАСЧЕТ
           </div>
           <div class="sub-title">
-            Мы автоматизировали
-            процесс рассчета
-            стоимости работ,
-            в результате вы получаете
-            быструю и подробную смету
+            Мы оптимизировали процесс расчета стоимости оказываемых услуг, в результате чего, заказчик получает
+            подробный сметный расчет и спецификацию на используемые материалы и оборудование
           </div>
         </div>
 
@@ -140,10 +137,8 @@
             КОМАНДА
           </div>
           <div class="sub-title">
-            У нас работают только
-            высококвалифицированные
-            специалисты, которые
-            знают свою работу
+            У нас работают только высококвалифицированные специалисты, которые имеют необходимую квалификацию и опыт
+            работ.
 
           </div>
         </div>
@@ -155,24 +150,19 @@
             и ОПЫТ
           </div>
           <div class="sub-title">
-            Наша компания
-            на рынке уже 20 лет,
-            за это время
-            мы отточили подход,
-            предотвращающий ошибки
-            на производстве
+            Наша компания находится на рынке уже более 20 лет, за это время нами разработана программа по контролю
+            качества, исключающая ошибки при производстве монтажных работ
           </div>
         </div>
 
         <div class="col-lg-3 col-6 advantage">
           <img src="assets/lab.png">
           <div class="title">
-            ЭЛЕКТРО-ЛАБОРАТОРИЯ
+            ЭЛЕКТРОТЕХНИЧЕСКАЯ ЛАБОРАТОРИЯ
           </div>
           <div class="sub-title">
-            Выявление неполадок в сети
-            входит в перечень работ,
-            электротехнической лаборатории
+            Выявление неполадок сети, обеспечение бесперебойного и безаварийного функционирования электрического
+            оборудования, независимо от его уровня сложности.
           </div>
         </div>
 
@@ -184,12 +174,8 @@
             ОБСЛУЖИВАНИЕ
           </div>
           <div class="sub-title">
-            Работа специалистов
-            с детальной разработкой решений,
-            именно для Вашего объекта
-            и контроль качества при
-            выполнении монтажных работ,
-            оформление документации
+            Работа специалиста или группы специалистов с детальной разработкой решений, именно для Вашего объекта и
+            контроль качества при выполнении монтажных работ. Оформление необходимой документации
           </div>
         </div>
 
@@ -215,9 +201,8 @@
             СПЕКТОР ПРИМЕНЕНИЯ
           </div>
           <div class="sub-title">
-            Все что необходимо заказчику
-            в области электроснабжения
-            предприятия до и выше 1000 В
+            Все что необходимо заказчику в области электроснабжения и эксплуатации электроустановок напряжением до и
+            выше 1000 В
           </div>
         </div>
       </div>
@@ -233,18 +218,16 @@
         и
         аттестованный в Федеральной службе по экологическому, технологическому и атомному надзору (Ростехнадзоре)
         персонал
-        электромонтажного подразделения и подразделения ЭТЛ.
+        электромонтажного участка  и подразделения ЭТЛ.
       </p>
       <p>
-        Главными принципами при проведении электромонтажных работ и электроизмерений электроустановок, является
-        максимальная
-        скрупулезность (тщательность, обстоятельность) в обследовании и детализация в работе
+        Главными принципами при проведении электромонтажных работ и электроизмерений электроустановок, является максимальная скрупулезность (тщательность, обстоятельность) в обследовании и детализация в работе
       </p>
-      <p>
+      <!-- <p>
         <b class="c-secondary">Работа сотрудников организации ООО «Проминвест-Ст» основана на оптимизации затрат
           Заказчика.</b> Стоимость нашего
         вознаграждения по договору, всегда окупается для Партнёров ООО «Проминвест-Ст» в финансовом плане, а также имеет
-        положительные моменты в виде бережённого эмоционального спокойствия и принятии обоснованных правильных решений.
+        положительные моменты в виде бережённого эмоционального спокойствия и принятии обоснованных правильных решений. -->
       </p>
     </div>
   </div>
@@ -357,7 +340,7 @@
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
-          
+
         </div>
       </div>
       <br>
