--- a/wiring.html
+++ b/wiring.html
@@ -63,45 +63,57 @@
   <div class="container">
     <div class="box">
       <p>
-        Компания ООО «Проминвест-Ст» предоставляет полный спектр услуг по электромонтажу электроустановок:
+        Компания ООО «Проминвест-Ст» предоставляет полный спектр услуг по монтажу электрических сетей и
+        электрооборудования:
       </p>
       <ul class="c-primary">
         <li>
-          электромонтажным работам любой сложности до и выше 1000В
+          Монтаж внутренних электрических сетей и оборудования жилых и административных зданий
         </li>
         <li>
-          ТП, РП, АСКУЭ
+          Монтаж технологического оборудования производственных помещений
         </li>
         <li>
-          уличное освещение
+          Строительство воздушных линий электропередач до и выше 1000 В
         </li>
         <li>
-          согласованию проектов и сдачей их в эксплуатацию
+          Строительство линий уличного освещения
         </li>
         <li>
-          Комплектацию объекта электрооборудованием ведущих зарубежных и отечественных производителей.
+          Монтаж заземляющих устройств
+        </li>
+        <li>
+          Монтаж кабельных линий 0,4 кВ, 10 кВ.
+        </li>
+        <li>
+          Ремонт кабельных линий 0,4 кВ, 10 кВ.
+        </li>
+        <li>
+          Монтаж трансформаторных подстанций 10/0,4 кВ, распределительных устройств 10 кВ, 0,4 кВ
+        </li>
+        <li>
+          Осуществляем поставку электроматериалов, кабельно-проводниковой продукции, электроизоляционных материалов.
         </li>
       </ul>
 
       <p>
-        Мы имеет все необходимые допуски и разрешения на вышеперечисленные работы.
-        Наши высококвалифицированные специалисты: инженеры, электромонтажники
-        имеют большой опыт работы.
+        Организация имеет допуск Саморегулируемой организации Ассоциация «Саморегулируемая региональная организация
+        строителей Северного Кавказа» к определенному виду работ, которые оказывают влияние на безопасность объектов
+        капитального строительства.
       </p>
     </div>
 
-    <div class="blur-box m-50">
+    <!-- <div class="blur-box m-50">
       Мы проводим <b class="c-primary">электромонтаж любого электрооборудования</b>, капитальный ремонт электрики,
       профилактические электротехнические работы. Если ваша электропроводка требует
       профессиональный электромонтаж или вам срочно нужна прокладка кабеля, электропроводка квартиры,
       а также высотный монтаж кабеля и электрооборудования, то специалисты нашей компании
       готовы работать круглосуточно, чтобы восстановить электроснабжение вашей энергосистемы
-    </div>
+    </div> -->
 
     <div class="box">
       <p>
-        Мы производим работы с индивидуальным подходом к каждому объекту и выполняем их качественно
-        и в сроки установленные заказчиком, <b class="c-primary">при необходимости круглосуточно.</b>
+        Мы производим работы с индивидуальным подходом к каждому Заказчику и выполняем их качественно и в сроки, установленные договорными обязательствами
       </p>
 
       <p>
@@ -111,13 +123,10 @@
       </p>
 
       <p>
-        Мы готовы взять на себя функции субподрядчика на крупных строительных объектах для проведения
-        электромонтажных работ, таких как: прокладка кабеля и электромонтаж оборудования промышленных предприятий,
-        монтаж
-        электропроводки в складских и торговых помещениях и электрификация офисных и жилых зданий.
+        Мы готовы взять на себя функции субподрядчика на крупных строительных объектах для выполнения полного комплекса электромонтажных работ
       </p>
 
-      <b class="c-primary">Привлекая нас в качестве подрядчика, Вы найдете надежного помощника в нашем лице.</b>
+      <b class="c-primary">Привлекая нас в качестве подрядчика, Вы найдете надежного партнера в нашем лице</b>
 
     </div>
   </div>
@@ -234,7 +243,7 @@
           <div class="portfolio-img"><img src="assets/projects/11.png" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
             <b>МЯСОКОМБИНАТ «ОЛИМПИЯ»</b><br>
-              ул. Октябрьская, 143/9, Георгиевск
+            ул. Октябрьская, 143/9, Георгиевск
           </div>
         </div>
 
@@ -356,7 +365,7 @@
           <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
-          
+
         </div>
       </div>
       <br>
@@ -378,7 +387,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-detect-breakpoint/src/bootstrap-detect-breakpoint.js"></script>
-  
+
 </body>
 
 </html>
