--- a/normative_base.html
+++ b/normative_base.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#">НОРМАТИВНАЯ БАЗА</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contacts.html">КОНТАКТЫ</a>
+          <a class="nav-link" href="contacts.php">КОНТАКТЫ</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -238,7 +238,7 @@
           <a class="link" href="elab.html">ЭЛЕКТРО-ЛАБОРАТОРИЯ</a><br>
           <a class="link" href="service.html">ОБСЛУЖИВАНИЕ</a><br>
           <a class="link" href="normative_base.html">НОРМАТИВНАЯ БАЗА</a><br>
-          <a class="link" href="contacts.html">КОНТАКТЫ</a><br>
+          <a class="link" href="contacts.php">КОНТАКТЫ</a><br>
         </div>
         <div class="col-md-4 section" style="text-align: right;">
           
@@ -246,7 +246,7 @@
       </div>
       <br>
       <p class="center">
-        Copyright © 2022 ООО "Проминвест-СТ".
+        Copyright © 2023 ООО "Проминвест-СТ".
       </p>
     </div>
   </div>
